--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.4",
     "vuex": "^3.4.0"
