--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "core-js": "^3.6.5",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.7.1",
+    "video.js": "^7.18.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.1",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^2.6.4",
     "vuex": "^3.4.0"
   },
